--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.alipay.sofa</groupId>
     <artifactId>sofa-ark</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -58,6 +58,18 @@
         <developerConnection>scm:git:ssh://github.com/sofastack/sofa-ark.git</developerConnection>
         <url>http://github.com/sofastack/sofa-ark/tree/master</url>
     </scm>
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>Nexus Release Repository</name>
+            <url>https://xxx.com/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>https://xxx.com/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <build>
         <plugins>
@@ -76,7 +88,9 @@
                 </executions>
                 <configuration>
                     <quiet>true</quiet>
-                    <header>${user.dir}/HEADER</header>
+<!--                    <header>${user.dir}/HEADER</header>-->
+                    <header>/Users/jessin/Documents/program/java/sofa-ark/HEADER</header>
+
                     <includes>
                         <include>**/src/main/java/**</include>
                         <include>**/src/test/java/**</include>
@@ -100,7 +114,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configFile>${user.dir}/Formatter.xml</configFile>
+<!--                    <configFile>${user.dir}/Formatter.xml</configFile>-->
+                    <configFile>/Users/jessin/Documents/program/java/sofa-ark/Formatter.xml</configFile>
+
                     <encoding>${project.encoding}</encoding>
                 </configuration>
             </plugin>
@@ -130,19 +146,19 @@
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.plugin}</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
+<!--                <version>${maven.javadoc.plugin}</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>attach-javadocs</id>-->
+<!--                        <goals>-->
+<!--                            <goal>jar</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 
             <plugin>
                 <groupId>org.jacoco</groupId>
