--- a/sofa-ark-parent/core-impl/archive/pom.xml
+++ b/sofa-ark-parent/core-impl/archive/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>sofa-ark-core-impl</artifactId>
         <groupId>com.alipay.sofa</groupId>
-        <version>1.1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>sofa-ark-archive</artifactId>
@@ -38,6 +38,11 @@
             <groupId>org.jmockit</groupId>
             <artifactId>jmockit</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.skywalking</groupId>-->
+<!--            <artifactId>apm-agent</artifactId>-->
+<!--            <version>8.1.0</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
