--- a/sofa-ark-plugin/web-ark-plugin/pom.xml
+++ b/sofa-ark-plugin/web-ark-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>sofa-ark-bom</artifactId>
         <groupId>com.alipay.sofa</groupId>
-        <version>1.1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../../sofa-ark-bom</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -26,6 +26,12 @@
         <dependency>
             <groupId>com.alipay.sofa</groupId>
             <artifactId>sofa-ark-common</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-jcl</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
